<resources>
    <string name="app_name">Checkpoint</string>
    <string name="action_settings">Settings</string>
    <string name="app_logo_description">App logo</string>
    <string name="explore_games">Explore Games</string>

    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Log In</string>
    <string name="register_fragment_label">Register</string>
    <string name="home_fragment_label">Home</string>
    <string name="detail_fragment_label">Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_button_desc">Add Item</string>

    <!-- Login fragment strings -->
    <string name="login_title">Hello Again!</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_button_text">Log In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_link">Don\'t have an account? Sign up</string>
    <string name="login_required">You must log in to view this page</string>

    <!-- Register fragment strings -->
    <string name="register_title">Welcome!</string>
    <string name="register_button_text">Register</string>
    <string name="password_confirmation_hint">Confirm Password</string>
    <string name="login_link">Already have an account? Log in</string>

    <!-- Home fragment strings -->
    <string name="errorTextLoadingGames">Error loading games</string>

    <!-- Game descriptions -->
    <string name="gameCoverDescription">Game cover</string>
    <string name="game_image_description">Game image</string>
    <string name="description_label">Description</string>
    <string name="platforms_label">Platforms</string>
    <string name="game_backdrop_description">Game screenshot</string>

    <!-- Game detail fragment strings -->
    <string name="rating_format">%.1f / %d</string>
    <string name="tba">TBA</string>
    <string name="error_loading_details">Error loading details: %1$s</string>
    <string name="not_available">Not available</string>

    <!-- Games Screen -->
    <string name="search_games_hint">Search games</string>
    <string name="all_filter">All</string>
    <string name="action_filter">Action</string>
    <string name="adventure_filter">Adventure</string>
    <string name="rpg_filter">RPG</string>
    <string name="shooter_filter">Shooter</string>
    <string name="grid_view">Grid View</string>
    <string name="list_view">List View</string>
    <string name="no_games_found">No games found</string>
    <string name="loading_more_games">Loading more games</string>
    <string name="filter_options">Filter options</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="visit_website">Visit website</string>
    <string name="game_added_to_collection">Game added to your collection!</string>

    <!-- Favorites -->
    <string name="favorites_title">My Favorites</string>
    <string name="no_favorite_games_message">You have no favorite games. Explore the store and mark your games with the heart button.</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="favorite_action">Favorite</string>
    <string name="loading_favorites">Loading favorites</string>
    <string name="error_loading_favorites">Error loading favorites</string>
    <string name="login_required_favorites">You must log in to view your favorites</string>
    <string name="game_added_to_favorites">Game added to favorites</string>
    <string name="game_removed_from_favorites">Game removed from favorites</string>
    <string name="login_required_to_favorite">Login required to add favorites</string>
    <string name="login_required_to_view_favorites">Login required to view favorites</string>

    <!-- Splash -->
    <string name="app_tagline">Discover your next favorite games</string>

    <!-- Others -->
    <string name="change_theme">Change theme</string>
    <string name="logout">Log out</string>
    <string name="filters">Filters</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="settings_not_implemented">Settings not implemented yet</string>

    <!-- Favorites fragment strings -->
    <string name="favorites_fragment_label">Favorites</string>
    <string name="no_favorites_message">You have no favorite games</string>
    <string name="login_required_message">Log in to view your favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="add_to_favorites">Add to favorites</string>

    <!-- Profile strings -->
    <string name="profile_title">Profile</string>

</resources>
