<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.checkpoint.MainActivity">

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="50"
        android:title="@string/filters"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
